assets/css/style.css
/* ... */
/*------------Foooter Styling------------*/

footer{
    }

footer p{
    color: #ebebeb;
    margin-bottom: 0;
    padding-top: 10px;
    padding-bottom: 10px;
}

.footer-item{
    text-align: center;
    font-size: 18px;
    margin: auto auto;
}

.footer-item a{
    text-decoration: none;
    color: #ffec00;
    font-size: 48px;
    padding-left:20px;
    padding-right:20px;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
}

.footer-item a:hover,
.footer-item a:active,
.footer-item a:focus{
    color:#ebebeb;
}


.footer-item span{
    vertical-align: super;
    font-size: 50%;
}

.footer-container{
    border-top: 5px solid #ffec00;
}

/*------------------Media--------------------*/


@media screen and (min-width:1256px)
{
    #carousel-nav .carousel-item img{
    position:relative;
    bottom:300px;}
}



@media only screen and (max-width:1024px){
    
    .logo{
        height:120px;
        width:120px;
    }
    
    
    h1{
        font-size:28px;
        margin: 20px auto;
        padding: 0;
    }

    .nav-holder{
        white-space: nowrap;
        padding-right:0px;
    }
    .nav-holder li a{
        font-size:18px;
    }
    #carouselExampleIndicators{
    width:100%;
}

.carousel-item{
    height:600px;
}

.testiomnial-container{
    margin:0;
}

 .testimonial-img img{
    width: 200px;
    height:200px;
    border-radius: 50%;  
}

.testimonial-item{
    margin-right:40px;
}
.hero-caption{
    margin-bottom: 75px;
}
.hero-caption h5{
    font-size: 20px;
}

.btn-hero{
    font-size:14px;
    height:35px;
    width:150px;
}

}

@media only screen and (max-width:768px){
    
    h1{
        font-size:25px;
        margin: 20px auto;
        padding: 0;
    }

    .nav-holder{
        white-space: nowrap;
    }
    .nav-holder li a{
        font-size:16px;
    }
    .carousel-item img{
     height:100%;
     width:100%;
}
    .logo{
        height:100px;
        width:120px;
        padding-left:20px;
        padding-top:10px;
    }

    .medal-txt{
    font-weight: bold;
    font-size:18px;
    border: 3px solid #0f0f0f;
    height:120px;
    min-width: 110px;
    border-radius: 50%;
}
}
@media only screen and (max-width:576px){

    .logo{
        height:75px;
        width:75px;
        padding:0;
        margin-left:0px;
    }

    .h1-container{
        padding-right:0;
        margin-top:0;
        margin-left:0;
    }

    .h1{
        margin-top:30px;
        margin-left: 130px;
        }
  


    .footer-item p{
    font-size: 16px; 
    }

    .footer-item a{
    font-size: 32px;
    padding-left:5px;
    padding-right: 5px;
    }


    .carousel-item{
        height:250px;
    }

    .carousel-inner{
        margin-top:0;}

    #home-header{
        background-color: #0f0f0f;
        border-bottom: 5px solid #ffec00;
    }
   h1{
       font-size: 26px;
       padding:0;
       margin-top:30px;
       margin-left:-130px
   }

   .navbar-toggler-icon{
       border: 1px solid #ebebeb;
   }

   .list-inline-item{
       display: block;
       text-align: right;
       margin: 0 auto;
   }

   .navbar-dark, .navbar-toggler{
       border:none;
       color:transparent;
   }

   #classes-link{
       margin-right:18px;
   }

   .testimonial-img{
       align-content: center;
   }
   
    .testimonial-img img{
    width: 150px;
    height:150px; 
    margin-left:100px;
    margin-bottom: 20px;
}

.testimonial-txt p{
    margin-left:30px;
}
.testiomnial-container{
    margin-bottom: -100px;
}

button:focus{
    outline:none;
}

.sticky-top{
    position: relative;
    display: flex;
}

.navbar{
    margin-top:-100px;
}

.medal{
    text-align: center;
    margin-bottom: 20px;
}

.medal-txt{
    font-weight: bold;
    font-size:20px;
    border: 3px solid #0f0f0f;
    height:100px;
    width:60%;
    border-radius: 50%;
    display: inline-block;
}

.medal-txt span{
    position: relative;
    top:35%;
}

.staff-img{
    width:100%;
    height:60%;
    margin-top:20px;
}
.card-container{
    margin-left:auto;
    margin-right:auto;
}
.ml-auto{
    margin-left:170px!important;
}
    
}

@media only screen and (max-width:375px){
    h1{
        font-size:20px;
    }

    .testimonial-img img{
        margin-left:75px;
    }
}

@media only screen and (max-width:320px){
    h1{
        margin-left:-80px;
    }
    
    .testimonial-img img{
        margin-left:55px;
    }
}

